# my-music-bot

./: Cargo.toml  README.md  config_template.json
src/: commands.rs  main.rs  util.rs
src/commands/: join.rs  leave.rs  nurupo.rs  pause.rs  play.rs  resume.rs  skip.rs
