[package]
name = "my-music-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
serenity = { versions = "0.11.5", features = [
    "cache",
    "client",
    "standard_framework",
    "rustls_backend",
] }
tokio = { version = "1.28.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2.5"

# feturesにyt-dlpを追加することでデフォルトがyoutube-dlからyt-dlpになる
songbird = { version = "0.3.2", features = ["builtin-queue", "yt-dlp"] }
